[package]
name = "espim"
version = "0.2.0"
authors = ["M*C*O <mcofficer@gmx.de>"]
edition = "2018"
license = "GPL-3.0"
description = "The Endless Sky Plug-In Manager"
repository = "https://github.com/EndlessSkyCommunity/espim"

[dependencies]
anyhow = "1.0"
dirs = "3.0"
log = "0.4"
serde = { version = "1.0", default_features = false, features = ["derive"] }
ureq = { version = "2.4", default_features = false, features = ["json", "tls"] }
zip-extract = { version = "0.1.0", default_features = false, features = ["deflate"] }
