[package]
name = "espim"
version = "0.2.2"
authors = ["M*C*O <mcofficer@gmx.de>"]
edition = "2024"
license = "GPL-3.0"
description = "The Endless Sky Plug-In Manager"
repository = "https://github.com/EndlessSkyCommunity/espim"

[dependencies]
anyhow = "1.0"
dirs = "6.0"
log = "0.4"
serde = { version = "1.0", default-features = false, features = ["derive"] }
ureq = { version = "3.0", features = ["json"] }
zip = { version = "4.3", default-features = false, features = ["deflate"] }
